--- a/views/index.ejs
+++ b/views/index.ejs
@@ -6,7 +6,7 @@
 
     <div class="about-fidget"> 
         <h3>- about fidget -</h3>
-        <p>fidget is a place for fidgeters to fidget. <br>
+        <p id="about-blur">fidget is a place for fidgeters to fidget. <br>
             fidget a little, fidget a lot. fidget away all you like!
             <br>abuse and harassment of any kind will <strong>not</strong> be tolerated. 
             <br>fidget on respectfully. <em>-admin</em>
