--- a/views/index.ejs
+++ b/views/index.ejs
@@ -6,10 +6,12 @@
 
     <div class="about-fidget"> 
         <h3>- about fidget -</h3>
-        <p id="about-blur">fidget is a place for fidgeters to fidget. <br>
-            fidget a little, fidget a lot. fidget away all you like!
-            <br>abuse and harassment of any kind will <strong>not</strong> be tolerated. 
-            <br>fidget on respectfully. <em>-admin</em>
+        <p id="about-blur">fidget is a place for fidgeters. <br>
+            fidget a little, fidget a lot.
+            <br>fidget away all you like!
+            <br>abuse and harassment of any  
+            <br>kind will <strong>not</strong> be tolerated. 
+            <br>fidget on righteously! <em>-admin</em>
         </p>
     </div>
 </body>
