--- a/views/posts/new.ejs
+++ b/views/posts/new.ejs
@@ -18,8 +18,8 @@
 
                     <div class="submit-button-container">
                         <div class="center">
-                            <input class="post-fidget-button" type="submit" value="Post to Fidget!">
-                            <button><a href="/posts">Cancel</a></button>
+                            <input class="post-fidget-button" type="submit" value="fidget!">
+                            <button id="cancel-button"><a id="cancel-link" href="/posts">don't</a></button>
                         </div>  
                     </div>
                 </div>
