--- a/views/posts/comments.ejs
+++ b/views/posts/comments.ejs
@@ -1,22 +1,25 @@
 <%- include('../partials/header.ejs') %> <!-- NOTE THAT THE DIRECTORY CHANGES -->
-<!--SEE FIDGET DETAIL/COMMENTS PAGE-->
+<!--FIDGET DETAIL/COMMENTS PAGE-->
 
+<br><br><br><br><br><br><br><br><br><br><br>
 <body>
-    
+    <div id="master-comments-container">
+        <!--Original Post section of master-comments-container-->
+        <div id="original-post"> 
+            <h4>Title</h4>
+                <h3><%= post.title %></h3>                  
 
+            <h4>Author</h4>
+                <%= post.author %>           
+        
+            <h4>Content</h4>
+                <%= post.content %>
+                <br><br>
+                <%= post.createdAt %>
 
-        <h2>Title</h2>
-            <h3><%= post.title %></h3>                  
+        </div>
 
-    
-        <h2>Author</h2>
-            <td><%= post.author %></td>                
-
-
-                
-        <h2>Content</h2>
-            <td><%= post.content %></td>
-            <td><%= post.date %></td>
+<!--Between Space (edit, delete buttons)-->
 
 
     <!-- Javascript/HTML for hiding edit button, revealing edit menu -->
@@ -48,35 +51,39 @@
         <h4>Leave a comment!</h4>
         <textarea name='content'></textarea>
         <div class="center">
-        <input type='submit' value='Add comment to Fidget!'>
+        <input type='submit' value='Send Fidget!'>
         </div>
     </form>
-    <% if (post.comments.length) { %>
-        <table>
-            <thead>
-                <tr>
-                    <th>Comments</th>
-                </tr>
-            </thead>
-            <tbody>
-                <% post.comments.forEach(function(c) { %>
-                    <tr>
-                        <td><%= c.content %> 
-                           
-  
-                        </td>
-                        
-                    </tr>
-               <% }); %>
-            </tbody>
-        </table>
-   <% } else { %>
-    <h4>No Comments Yet!</h4>
-    <h3>Add a comment why don't ya!</h3>
-   <% } %>
+
+<!--Between Space (edit, delete buttons)-->
+
+        <!--Comments section of master-comments-container-->
+        <div id="sub-comments-container">
+
+                <!--If there are comments already, then...-->
+            <% if (post.comments.length) { %>
+                <h3>subfidgets</h3>
+                    <% post.comments.forEach(function(c) { %>
+                    <div id="sub-fidgets"> 
+                        <%= c.content %> <br>
+                    </div>
+                        <% }); %>
+                        <br>
+            <!--If there are no comments yet-->
+            <% } else { %>
+                <h3>no subfidgets yet</h3>
+                <p>Add a fidget why don't ya!</p>
+            <% } %>
+
+        </div>
+    </div>
+    
+
+
+       
+
    <p><img src="https://www.freeiconspng.com/uploads/high-resolution-fidget-spinner-black-image-17.png" width="50" alt="High Resolution Fidget Spinner Black Image" class="fidget-spinner" /></p>
     
-</body>
-</html>
 
-<%- include('../partials/footer.ejs') %> <!-- NOTE THAT THE DIRECTORY CHANGES -->
+
+<%- include('../partials/footer.ejs') %> 
