--- a/public/css/style.css
+++ b/public/css/style.css
@@ -145,10 +145,8 @@ input {
     width: 90%;
     text-align: left;
     padding: 2%;
-    
     border: 1px solid darkblue;
     border-radius: 2px;
-    
     margin: 5%;
     margin-bottom: 0%;
     align-items: center;
@@ -375,9 +373,27 @@ footer {
     margin: 3%;
     padding: 3%;
     background-color: aliceblue;
-
     box-shadow: inset 0px 0px 2px darkblue; 
 }
+#post-update-field {
+    border: 1px solid darkblue;
+    border-radius: 20px;
+    margin: 5%;
+    background-color: aliceblue;
+    box-shadow: 0px 0px 2px darkblue; 
+}
+.center {
+    align-items: center;
+    display: inline-flex;
+    margin-left: 40%;
+    margin-right: 40%;
+}
+#delete-button, #edit-button {
+    background-color: green;
+
+
+}
+
 
 /* CUSTOM SCROLLBAR: https://www.w3schools.com/howto/howto_css_custom_scrollbar.asp */
 /* width */
