--- a/public/css/style.css
+++ b/public/css/style.css
@@ -382,17 +382,62 @@ footer {
     background-color: aliceblue;
     box-shadow: 0px 0px 2px darkblue; 
 }
+/* edit and delete button "container" */
 .center {
-    align-items: center;
-    display: inline-flex;
-    margin-left: 40%;
-    margin-right: 40%;
+    justify-content: center;
+    display: flex;
 }
-#delete-button, #edit-button {
-    background-color: green;
-
-
+#edit-button {
+    font-family: 'Khula', sans-serif;
+    background-color: darkblue;
+    color: aliceblue;
+    padding: 1em;
+    width: 20vw;
+    text-align: center;
+    border: 1px solid orange;
+    border-radius: 10px;
+    box-shadow:  0px 1px 2px darkblue; 
+    margin-right: 4vw;
 }
+#delete-form{
+    font-family: 'Khula', sans-serif;
+    background-color: darkblue;
+    color: aliceblue;
+    padding: 1em;
+    width: 20vw;
+    text-align: center;
+    border: 1px solid red;
+    border-radius: 10px;
+    box-shadow:  0px 1px 2px darkblue; 
+    margin-left: 4vw;
+}
+#edit-button:hover {
+    background-color: orange;
+    color: aliceblue;
+    padding: 1em;
+    width: 20vw;
+    text-align: center;
+    border: 1px solid orange;
+    border-radius: 10px;
+    box-shadow:  0px 1px 2px darkblue; 
+    margin-right: 4vw;
+}
+#delete-form:hover {
+    background-color: red;
+    color: aliceblue;
+    padding: 1em;
+    width: 20vw;
+    text-align: center;
+    border: 1px solid red;
+    border-radius: 10px;
+    box-shadow:  0px 1px 2px darkblue; 
+    margin-left: 4vw;
+}
+/* edit form only appears when called by edit button */
+.edit-fidget-form {
+    background-color: darkblue;
+}
+
 
 
 /* CUSTOM SCROLLBAR: https://www.w3schools.com/howto/howto_css_custom_scrollbar.asp */
