--- a/views/posts/new.ejs
+++ b/views/posts/new.ejs
@@ -17,8 +17,8 @@
                         <textarea id="post" name="content" placeholder="You may Fidget away, here!" required="required"></textarea>
 
                     <div class="submit-button-container">
-                        <div class="center">
-                            <input class="post-fidget-button" type="submit" value="fidget!">
+                        <div class="center-new">
+                            <input class="post-fidget-button" type="submit" value="fidget!"><br>
                             <button id="cancel-button"><a id="cancel-link" href="/posts">don't</a></button>
                         </div>  
                     </div>
@@ -40,10 +40,11 @@
                 <% }) %>
         </div><!--END RIGHT COLUMN-->
     </div>
-    <br>
-    <br>
+
 </body>
-<br>
-<br>
+
+<img src="https://www.freeiconspng.com/uploads/high-resolution-fidget-spinner-black-image-17.png" width="50" alt="High Resolution Fidget Spinner Black Image" class="fidget-spinner" />
+<br><br><br>
+
 
 <%- include('../partials/footer.ejs') %> <!-- NOTE THAT THE DIRECTORY CHANGES -->
