--- a/views/index.ejs
+++ b/views/index.ejs
@@ -15,6 +15,6 @@
         </p>
     </div>
 </body>
-
-<br><br>
+<img src="https://www.freeiconspng.com/uploads/high-resolution-fidget-spinner-black-image-17.png" width="50" alt="High Resolution Fidget Spinner Black Image" class="fidget-spinner" />
+<br><br><br>
 <%- include('partials/footer.ejs') %>
