--- a/views/posts/index.ejs
+++ b/views/posts/index.ejs
@@ -17,11 +17,14 @@
             <% }) %>
         </div>
 
-<button class="top-button" onclick="toTop()">To Top</button>
-<br>
+<div class="center">
+    <button class="top-button" onclick="toTop()">To Top</button> 
+</div>
+<br><br><br>
 </body>
 <br>
 <br>
-
+<img src="https://www.freeiconspng.com/uploads/high-resolution-fidget-spinner-black-image-17.png" width="50" alt="High Resolution Fidget Spinner Black Image" class="fidget-spinner" />
+<br><br><br>
 
 <%- include('../partials/footer.ejs') %> <!-- NOTE THAT THE DIRECTORY CHANGES -->
