--- a/views/user.ejs
+++ b/views/user.ejs
@@ -3,54 +3,83 @@
     </head>
     <body>
         <br>  <br>  <br>  <br>  <br>  <br>  <br>        <br>  <br>  <br>  <br>  <br>  <br>  <br>
-        <nav>
-            <ul>
-                <li><img src="https://www.freeiconspng.com/uploads/high-resolution-fidget-spinner-black-image-17.png" width="50" alt="High Resolution Fidget Spinner Black Image"  class="fidget-spinner" /></a></li>
-                <li>
-                    <% if (user) { %>
-                        <a href="/logout">Log Out</a>
-                        <% } else { %>
-                        <a href="/auth/google">Login with Google</a>
-                        <% } %>
-                </li>
-                <li>
-                    <a href="/posts">Main</a>
-                </li>
-                <li>
-                    <a href="posts/new">Make a Post</a>
-                </li>
-            </ul>
-        </nav>
- 
-
-        <h1>Fidget User Page</h1>
-        <h2>What is Fidget?</h2> <!-- Shows logged in user's name -->
-        Member since: <%= user %> User object has no data because I'm not logged in
 
 
         <% if (user) { %>
-            <p>This user has made <%= user.posts.length %> posts! </p>
-            <table>
-                <thead>
-                    <tr>
-                        <th>Posts</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <% user.posts.forEach(function(c) { %>
-                        <tr>
-                            <td><%= c.posts %></td>
-                        </tr>
-                   <% }); %>
-                </tbody>
-            </table>
-       <% } else { %>
+            <h3>
+                <a href="/logout"> Logout </a>
+            </h3>
+            <!--if AUTH'D-->
 
-        <h4>No Posts Yet!</h4>
-       <% } %>
+            <h1><%= user.name %>'s Fidget Page</h1><!-- Shows logged in user's name -->
+            <h4>Fidgeting since: <%= user.createdAt %></h4> 
+
+            <% if (user.posts.length == 0) { %>
+                <p>Sup? You fidgeting?</p>
+            <% } else { %>
+                <h4>This user has made <%= user.posts.length %> posts!</h4>
+
+                
+
+
+                
+            <% } %>
+
+
+
+
+
+
+
+
+
+                       <% if (user.posts.length) { %>
+                        <h3>- fidgets -</h3>
+                        <div class="fidget-field"> 
+                            <% posts.reverse().forEach(function(post){ %>
+                                    <div class="fidget-container"><!--Wrap in a button to make it all clickable-->
+                                        <h4> <%= post.title %> </h4>
+                                        <p>-<%= post.author %>, total fidgets: <%= post.comments.length %>
+                                        <br><br>
+                                        <a href='/posts/<%= post._id %>'>read and comment</a></p>
+                                        <br>
+                                    </div>
+                            <% }) %>
+                        </div>
+                
+                    </tbody>
+                </table>
+           <% } else { %>
+            <h4>No Posts Yet!</h4>
+           <% } %>
+
+
+
+
+
+
+
+
+
+
+
+            <!--if NOT AUTH'D-->
+            <% } else { %>
+            <h3> <a href="/auth/google">Login with Google</a> </h3>
+            <% } %>
+
+            <!-- All user log-in conditional, otherwise signup! -->
+            <!-- Have to get rid of optional name tags in models. Must be mandatory and automatic -->
+
+
+
+            <div class="center">
+                <button class="top-button" onclick="toTop()">To Top</button> 
+            </div>
+            <br><br><br>
 
       
     </body>
-</html>
+
 
 <%- include('partials/footer.ejs') %>
