Added user functionality to home page, login button on home.

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -13,7 +13,16 @@
             <br>kind will <strong>not</strong> be tolerated. 
             <br>fidget on righteously! <em>-admin</em>
         </p>
+        <br>
+
+        <% if (user) { %>
+            <h1> <a href="/logout"> Logout as <%= user.name %> </a> </h1>
+        <% } else { %>
+            <h1> <a href="/auth/google">Login with Google</a> </h1>
+        <% } %>
+
     </div>
+
 </body>
 <img src="https://www.freeiconspng.com/uploads/high-resolution-fidget-spinner-black-image-17.png" width="50" alt="High Resolution Fidget Spinner Black Image" class="fidget-spinner" />
 <br><br><br>
