--- a/public/css/style.css
+++ b/public/css/style.css
@@ -40,6 +40,18 @@ h4 {
 p {
     font-family: Arial, Helvetica, sans-serif;
 }
+/* for google auth button on index/user pages */
+.auth-link {
+    color: darkblue;
+    text-shadow: 0px 1px 3px lightblue; 
+}
+.auth-link:hover {
+    color: lightblue;
+    text-shadow: 0px 1px 3px darkblue; 
+}
+.auth-link:active {
+    color: purple;
+}
 
 body { /* shrink to 90% vw */
     margin-left: 5%;
