--- a/views/user.ejs
+++ b/views/user.ejs
@@ -2,22 +2,20 @@
 <!--UNUSED FOR -->
     </head>
     <body>
-        <br>  <br>  <br>  <br>  <br>  <br>  <br>        <br>  <br>  <br>  <br>  <br>  <br>  <br>
+        <br>  <br>  <br>  <br>  <br>  <br>  <br>  <br>  <br>  <br>  <br>  <br>
 
 
         <% if (user) { %>
-            <h3>
-                <a href="/logout"> Logout </a>
-            </h3>
             <!--if AUTH'D-->
+            <h4> <a href="/logout" class="auth-link"> Logout as <%= user.name %> </a> </h4>
 
-            <h1><%= user.name %>'s Fidgets</h1><!-- Shows logged in user's name -->
+            <h3><%= user.name %>'s Fidgets</h3><!-- Shows logged in user's name -->
             <div class="center"> <h4>fidgeception: <%= user.createdAt %></h4> </div>
-
             <% if (user.posts.length == 0) { %>
-                <h3>Sup...You fidgeting?</h3> <!-- displays if auth but no posts -->
+                <br><br>
+                <div class="center"> <h4>Sup...You fidgeting?</h4> </div> <!-- displays if auth but no posts -->
             <% } else { %>
-                <h4>This user has made <%= user.posts.length %> posts!</h4>
+                <h4>This user has made <%= user.posts.length %> posts!</h4> 
 
                 <h3>- fidgets -</h3>
                 <div class="fidget-field"> 
@@ -39,7 +37,7 @@
 
             <!--if NOT AUTH'D-->
             <% } else { %>
-            <h1> <a href="/auth/google">Login with Google</a> </h1>
+            <h1> <a href="/auth/google" class="auth-link">Login with Google</a> </h1>
             <% } %>
 
             <!-- All user log-in conditional, otherwise signup! -->
