--- a/views/user.ejs
+++ b/views/user.ejs
@@ -15,6 +15,7 @@
                 <br><br>
                 <div class="center"> <h4>Sup...You fidgeting?</h4> </div> <!-- displays if auth but no posts -->
             <% } else { %>
+            <!--if NOT AUTH'D-->
                 <h4>This user has made <%= user.posts.length %> posts!</h4> 
 
                 <h3>- fidgets -</h3>
